--- a/PDS_system/src/index.css
+++ b/PDS_system/src/index.css
@@ -1,3 +1,18 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
+@layer components{
+
+    input{
+        outline: none;
+        height: 50px;
+        box-shadow: none;
+        padding: 0 4px ;
+    }
+    input:focus{
+        outline: none;
+        box-shadow: none !important;
+    }
+}
