--- a/PDS_system/Css/output.css
+++ b/PDS_system/Css/output.css
@@ -562,6 +562,10 @@ input:focus{
   bottom: -17px;
 }
 
+.left-0 {
+  left: 0px;
+}
+
 .left-\[50\%\] {
   left: 50%;
 }
@@ -574,12 +578,24 @@ input:focus{
   right: 20px;
 }
 
+.top-0 {
+  top: 0px;
+}
+
 .top-\[20px\] {
   top: 20px;
 }
 
 .top-\[50\%\] {
   top: 50%;
+}
+
+.right-0 {
+  right: 0px;
+}
+
+.float-right {
+  float: right;
 }
 
 .m-auto {
@@ -608,12 +624,16 @@ input:focus{
   margin-bottom: 12px;
 }
 
-.mb-\[20px\] {
-  margin-bottom: 20px;
-}
-
 .mb-\[30px\] {
   margin-bottom: 30px;
+}
+
+.mb-\[50px\] {
+  margin-bottom: 50px;
+}
+
+.ml-\[10px\] {
+  margin-left: 10px;
 }
 
 .mr-\[10px\] {
@@ -648,10 +668,6 @@ input:focus{
   margin-top: 12px;
 }
 
-.mt-\[20px\] {
-  margin-top: 20px;
-}
-
 .mt-\[4px\] {
   margin-top: 4px;
 }
@@ -664,16 +680,8 @@ input:focus{
   margin-top: 8px;
 }
 
-.mb-\[50px\] {
-  margin-bottom: 50px;
-}
-
-.mb-\[5px\] {
-  margin-bottom: 5px;
-}
-
-.mb-\[15px\] {
-  margin-bottom: 15px;
+.mt-\[30px\] {
+  margin-top: 30px;
 }
 
 .block {
@@ -708,16 +716,16 @@ input:focus{
   height: 50px;
 }
 
-.h-\[80px\] {
-  height: 80px;
-}
-
 .h-full {
   height: 100%;
 }
 
 .h-screen {
   height: 100vh;
+}
+
+.h-\[40px\] {
+  height: 40px;
 }
 
 .min-h-screen {
@@ -748,16 +756,32 @@ input:focus{
   width: 300px;
 }
 
+.w-\[50px\] {
+  width: 50px;
+}
+
 .w-\[80\%\] {
   width: 80%;
 }
 
-.w-\[80px\] {
-  width: 80px;
-}
-
 .w-full {
   width: 100%;
+}
+
+.w-screen {
+  width: 100vw;
+}
+
+.w-\[40px\] {
+  width: 40px;
+}
+
+.w-\[50\%\] {
+  width: 50%;
+}
+
+.w-\[40\%\] {
+  width: 40%;
 }
 
 .max-w-screen-xl {
@@ -881,10 +905,6 @@ input:focus{
   border-radius: 0.75rem;
 }
 
-.rounded-sm {
-  border-radius: 0.125rem;
-}
-
 .border {
   border-width: 1px;
 }
@@ -897,11 +917,11 @@ input:focus{
   border-width: 2px;
 }
 
-.border-b-\[2px\] {
+.border-b-2 {
   border-bottom-width: 2px;
 }
 
-.border-b-2 {
+.border-b-\[2px\] {
   border-bottom-width: 2px;
 }
 
@@ -918,11 +938,6 @@ input:focus{
 .border-gray-300 {
   --tw-border-opacity: 1;
   border-color: rgb(209 213 219 / var(--tw-border-opacity));
-}
-
-.border-b-slate-300 {
-  --tw-border-opacity: 1;
-  border-bottom-color: rgb(203 213 225 / var(--tw-border-opacity));
 }
 
 .border-b-slate-200 {
@@ -950,6 +965,16 @@ input:focus{
   background-color: rgb(74 222 128 / var(--tw-bg-opacity));
 }
 
+.bg-green-50 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(240 253 244 / var(--tw-bg-opacity));
+}
+
+.bg-red-50 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(254 242 242 / var(--tw-bg-opacity));
+}
+
 .bg-slate-100 {
   --tw-bg-opacity: 1;
   background-color: rgb(241 245 249 / var(--tw-bg-opacity));
@@ -960,29 +985,14 @@ input:focus{
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
-.bg-gray-400 {
+.bg-red-500 {
   --tw-bg-opacity: 1;
-  background-color: rgb(156 163 175 / var(--tw-bg-opacity));
+  background-color: rgb(239 68 68 / var(--tw-bg-opacity));
 }
 
-.bg-gray-300 {
+.bg-green-500 {
   --tw-bg-opacity: 1;
-  background-color: rgb(209 213 219 / var(--tw-bg-opacity));
-}
-
-.bg-blue-50 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(239 246 255 / var(--tw-bg-opacity));
-}
-
-.bg-green-50 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(240 253 244 / var(--tw-bg-opacity));
-}
-
-.bg-red-50 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(254 242 242 / var(--tw-bg-opacity));
+  background-color: rgb(34 197 94 / var(--tw-bg-opacity));
 }
 
 .bg-gradient-to-r {
@@ -1009,8 +1019,21 @@ input:focus{
      object-fit: contain;
 }
 
+.object-cover {
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
+.p-2 {
+  padding: 0.5rem;
+}
+
 .p-\[10px\] {
   padding: 10px;
+}
+
+.p-\[12px\] {
+  padding: 12px;
 }
 
 .p-\[15px\] {
@@ -1025,9 +1048,19 @@ input:focus{
   padding: 40px;
 }
 
+.px-2 {
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
+}
+
 .px-4 {
   padding-left: 1rem;
   padding-right: 1rem;
+}
+
+.px-\[10px\] {
+  padding-left: 10px;
+  padding-right: 10px;
 }
 
 .px-\[12px\] {
@@ -1045,6 +1078,11 @@ input:focus{
   padding-right: 4px;
 }
 
+.py-1 {
+  padding-top: 0.25rem;
+  padding-bottom: 0.25rem;
+}
+
 .py-2 {
   padding-top: 0.5rem;
   padding-bottom: 0.5rem;
@@ -1053,6 +1091,11 @@ input:focus{
 .py-5 {
   padding-top: 1.25rem;
   padding-bottom: 1.25rem;
+}
+
+.py-\[10px\] {
+  padding-top: 10px;
+  padding-bottom: 10px;
 }
 
 .py-\[2px\] {
@@ -1073,35 +1116,6 @@ input:focus{
 .py-\[8px\] {
   padding-top: 8px;
   padding-bottom: 8px;
-}
-
-.px-\[10px\] {
-  padding-left: 10px;
-  padding-right: 10px;
-}
-
-.px-\[20\] {
-  padding-left: 20;
-  padding-right: 20;
-}
-
-.py-\[10px\] {
-  padding-top: 10px;
-  padding-bottom: 10px;
-}
-
-.px-2 {
-  padding-left: 0.5rem;
-  padding-right: 0.5rem;
-}
-
-.py-1 {
-  padding-top: 0.25rem;
-  padding-bottom: 0.25rem;
-}
-
-.pb-\[5px\] {
-  padding-bottom: 5px;
 }
 
 .text-center {
@@ -1145,13 +1159,14 @@ input:focus{
   font-weight: 600;
 }
 
-.font-extrabold {
-  font-weight: 800;
-}
-
 .text-black {
   --tw-text-opacity: 1;
   color: rgb(0 0 0 / var(--tw-text-opacity));
+}
+
+.text-blue-500 {
+  --tw-text-opacity: 1;
+  color: rgb(59 130 246 / var(--tw-text-opacity));
 }
 
 .text-gray-600 {
@@ -1164,16 +1179,6 @@ input:focus{
   color: rgb(55 65 81 / var(--tw-text-opacity));
 }
 
-.text-white {
-  --tw-text-opacity: 1;
-  color: rgb(255 255 255 / var(--tw-text-opacity));
-}
-
-.text-blue-500 {
-  --tw-text-opacity: 1;
-  color: rgb(59 130 246 / var(--tw-text-opacity));
-}
-
 .text-green-700 {
   --tw-text-opacity: 1;
   color: rgb(21 128 61 / var(--tw-text-opacity));
@@ -1182,6 +1187,11 @@ input:focus{
 .text-red-700 {
   --tw-text-opacity: 1;
   color: rgb(185 28 28 / var(--tw-text-opacity));
+}
+
+.text-white {
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
 .opacity-\[0\.89\] {
@@ -1222,8 +1232,8 @@ input:focus{
   --tw-ring-color: rgb(220 38 38 / 0.1);
 }
 
-.hover\:rounded-lg:hover {
-  border-radius: 0.5rem;
+.last\:mr-0:last-child {
+  margin-right: 0px;
 }
 
 .hover\:rounded-tl-lg:hover {
@@ -1309,10 +1319,6 @@ input:focus{
 
   .md\:inline-flex {
     display: inline-flex;
-  }
-
-  .md\:w-\[600px\] {
-    width: 600px;
   }
 
   .md\:space-x-6 > :not([hidden]) ~ :not([hidden]) {
