--- a/PDS_system/Css/output.css
+++ b/PDS_system/Css/output.css
@@ -562,10 +562,6 @@ input:focus{
   bottom: -17px;
 }
 
-.left-0 {
-  left: 0px;
-}
-
 .left-\[50\%\] {
   left: 50%;
 }
@@ -578,10 +574,6 @@ input:focus{
   right: 20px;
 }
 
-.top-0 {
-  top: 0px;
-}
-
 .top-\[20px\] {
   top: 20px;
 }
@@ -590,12 +582,8 @@ input:focus{
   top: 50%;
 }
 
-.right-0 {
-  right: 0px;
-}
-
-.float-right {
-  float: right;
+.col-span-4 {
+  grid-column: span 4 / span 4;
 }
 
 .m-auto {
@@ -680,8 +668,12 @@ input:focus{
   margin-top: 8px;
 }
 
-.mt-\[30px\] {
-  margin-top: 30px;
+.mb-\[20px\] {
+  margin-bottom: 20px;
+}
+
+.mb-\[40px\] {
+  margin-bottom: 40px;
 }
 
 .block {
@@ -700,6 +692,10 @@ input:focus{
   display: table;
 }
 
+.grid {
+  display: grid;
+}
+
 .hidden {
   display: none;
 }
@@ -712,6 +708,10 @@ input:focus{
   height: 250px;
 }
 
+.h-\[40px\] {
+  height: 40px;
+}
+
 .h-\[50px\] {
   height: 50px;
 }
@@ -722,10 +722,6 @@ input:focus{
 
 .h-screen {
   height: 100vh;
-}
-
-.h-\[40px\] {
-  height: 40px;
 }
 
 .min-h-screen {
@@ -756,8 +752,12 @@ input:focus{
   width: 300px;
 }
 
-.w-\[50px\] {
-  width: 50px;
+.w-\[40\%\] {
+  width: 40%;
+}
+
+.w-\[40px\] {
+  width: 40px;
 }
 
 .w-\[80\%\] {
@@ -770,18 +770,6 @@ input:focus{
 
 .w-screen {
   width: 100vw;
-}
-
-.w-\[40px\] {
-  width: 40px;
-}
-
-.w-\[50\%\] {
-  width: 50%;
-}
-
-.w-\[40\%\] {
-  width: 40%;
 }
 
 .max-w-screen-xl {
@@ -808,6 +796,15 @@ input:focus{
 
 .cursor-pointer {
   cursor: pointer;
+}
+
+.columns-4 {
+  -moz-columns: 4;
+       columns: 4;
+}
+
+.grid-cols-4 {
+  grid-template-columns: repeat(4, minmax(0, 1fr));
 }
 
 .flex-col {
@@ -848,6 +845,10 @@ input:focus{
 
 .gap-\[50px\] {
   gap: 50px;
+}
+
+.gap-\[10px\] {
+  gap: 10px;
 }
 
 .gap-x-1 {
@@ -925,6 +926,10 @@ input:focus{
   border-bottom-width: 2px;
 }
 
+.border-none {
+  border-style: none;
+}
+
 .border-black {
   --tw-border-opacity: 1;
   border-color: rgb(0 0 0 / var(--tw-border-opacity));
@@ -970,9 +975,19 @@ input:focus{
   background-color: rgb(240 253 244 / var(--tw-bg-opacity));
 }
 
+.bg-green-500 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(34 197 94 / var(--tw-bg-opacity));
+}
+
 .bg-red-50 {
   --tw-bg-opacity: 1;
   background-color: rgb(254 242 242 / var(--tw-bg-opacity));
+}
+
+.bg-red-500 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(239 68 68 / var(--tw-bg-opacity));
 }
 
 .bg-slate-100 {
@@ -985,14 +1000,9 @@ input:focus{
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
-.bg-red-500 {
+.bg-orange-500 {
   --tw-bg-opacity: 1;
-  background-color: rgb(239 68 68 / var(--tw-bg-opacity));
-}
-
-.bg-green-500 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(34 197 94 / var(--tw-bg-opacity));
+  background-color: rgb(249 115 22 / var(--tw-bg-opacity));
 }
 
 .bg-gradient-to-r {
@@ -1046,6 +1056,14 @@ input:focus{
 
 .p-\[40px\] {
   padding: 40px;
+}
+
+.p-\[5px\] {
+  padding: 5px;
+}
+
+.p-\[8px\] {
+  padding: 8px;
 }
 
 .px-2 {
@@ -1159,6 +1177,10 @@ input:focus{
   font-weight: 600;
 }
 
+.font-extrabold {
+  font-weight: 800;
+}
+
 .text-black {
   --tw-text-opacity: 1;
   color: rgb(0 0 0 / var(--tw-text-opacity));
@@ -1214,6 +1236,11 @@ input:focus{
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
+.outline-none {
+  outline: 2px solid transparent;
+  outline-offset: 2px;
+}
+
 .ring-1 {
   --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
   --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(1px + var(--tw-ring-offset-width)) var(--tw-ring-color);
@@ -1232,8 +1259,8 @@ input:focus{
   --tw-ring-color: rgb(220 38 38 / 0.1);
 }
 
-.last\:mr-0:last-child {
-  margin-right: 0px;
+.filter {
+  filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
 }
 
 .hover\:rounded-tl-lg:hover {
@@ -1273,6 +1300,10 @@ input:focus{
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
+.focus\:border-none:focus {
+  border-style: none;
+}
+
 .focus\:border-blue-500:focus {
   --tw-border-opacity: 1;
   border-color: rgb(59 130 246 / var(--tw-border-opacity));
@@ -1292,6 +1323,15 @@ input:focus{
 .focus\:ring-blue-200:focus {
   --tw-ring-opacity: 1;
   --tw-ring-color: rgb(191 219 254 / var(--tw-ring-opacity));
+}
+
+.focus-visible\:border-none:focus-visible {
+  border-style: none;
+}
+
+.focus-visible\:outline-none:focus-visible {
+  outline: 2px solid transparent;
+  outline-offset: 2px;
 }
 
 .active\:bg-gray-900:active {
