--- a/PDS_system/Css/output.css
+++ b/PDS_system/Css/output.css
@@ -562,6 +562,10 @@ input:focus{
   bottom: -17px;
 }
 
+.left-0 {
+  left: 0px;
+}
+
 .left-\[50\%\] {
   left: 50%;
 }
@@ -574,16 +578,16 @@ input:focus{
   right: 20px;
 }
 
+.top-0 {
+  top: 0px;
+}
+
 .top-\[20px\] {
   top: 20px;
 }
 
 .top-\[50\%\] {
   top: 50%;
-}
-
-.col-span-4 {
-  grid-column: span 4 / span 4;
 }
 
 .m-auto {
@@ -595,9 +599,19 @@ input:focus{
   margin-right: 0.5rem;
 }
 
+.mx-\[10px\] {
+  margin-left: 10px;
+  margin-right: 10px;
+}
+
 .mx-auto {
   margin-left: auto;
   margin-right: auto;
+}
+
+.my-\[12px\] {
+  margin-top: 12px;
+  margin-bottom: 12px;
 }
 
 .mb-4 {
@@ -614,6 +628,10 @@ input:focus{
 
 .mb-\[30px\] {
   margin-bottom: 30px;
+}
+
+.mb-\[40px\] {
+  margin-bottom: 40px;
 }
 
 .mb-\[50px\] {
@@ -656,6 +674,14 @@ input:focus{
   margin-top: 12px;
 }
 
+.mt-\[14px\] {
+  margin-top: 14px;
+}
+
+.mt-\[15px\] {
+  margin-top: 15px;
+}
+
 .mt-\[4px\] {
   margin-top: 4px;
 }
@@ -666,14 +692,6 @@ input:focus{
 
 .mt-\[8px\] {
   margin-top: 8px;
-}
-
-.mb-\[20px\] {
-  margin-bottom: 20px;
-}
-
-.mb-\[40px\] {
-  margin-bottom: 40px;
 }
 
 .block {
@@ -736,6 +754,10 @@ input:focus{
   width: 25%;
 }
 
+.w-\[100\%\] {
+  width: 100%;
+}
+
 .w-\[100px\] {
   width: 100px;
 }
@@ -758,6 +780,10 @@ input:focus{
 
 .w-\[40px\] {
   width: 40px;
+}
+
+.w-\[50\%\] {
+  width: 50%;
 }
 
 .w-\[80\%\] {
@@ -798,11 +824,6 @@ input:focus{
   cursor: pointer;
 }
 
-.columns-4 {
-  -moz-columns: 4;
-       columns: 4;
-}
-
 .grid-cols-4 {
   grid-template-columns: repeat(4, minmax(0, 1fr));
 }
@@ -835,6 +856,10 @@ input:focus{
   justify-content: space-around;
 }
 
+.gap-\[10px\] {
+  gap: 10px;
+}
+
 .gap-\[20px\] {
   gap: 20px;
 }
@@ -845,10 +870,6 @@ input:focus{
 
 .gap-\[50px\] {
   gap: 50px;
-}
-
-.gap-\[10px\] {
-  gap: 10px;
 }
 
 .gap-x-1 {
@@ -926,6 +947,10 @@ input:focus{
   border-bottom-width: 2px;
 }
 
+.border-solid {
+  border-style: solid;
+}
+
 .border-none {
   border-style: none;
 }
@@ -980,6 +1005,11 @@ input:focus{
   background-color: rgb(34 197 94 / var(--tw-bg-opacity));
 }
 
+.bg-orange-500 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(249 115 22 / var(--tw-bg-opacity));
+}
+
 .bg-red-50 {
   --tw-bg-opacity: 1;
   background-color: rgb(254 242 242 / var(--tw-bg-opacity));
@@ -998,11 +1028,6 @@ input:focus{
 .bg-white {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
-}
-
-.bg-orange-500 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(249 115 22 / var(--tw-bg-opacity));
 }
 
 .bg-gradient-to-r {
@@ -1177,10 +1202,6 @@ input:focus{
   font-weight: 600;
 }
 
-.font-extrabold {
-  font-weight: 800;
-}
-
 .text-black {
   --tw-text-opacity: 1;
   color: rgb(0 0 0 / var(--tw-text-opacity));
@@ -1214,6 +1235,10 @@ input:focus{
 .text-white {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+
+.opacity-0 {
+  opacity: 0;
 }
 
 .opacity-\[0\.89\] {
@@ -1261,6 +1286,10 @@ input:focus{
 
 .filter {
   filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
+}
+
+.visited\:border-none:visited {
+  border-style: none;
 }
 
 .hover\:rounded-tl-lg:hover {
@@ -1323,10 +1352,6 @@ input:focus{
 .focus\:ring-blue-200:focus {
   --tw-ring-opacity: 1;
   --tw-ring-color: rgb(191 219 254 / var(--tw-ring-opacity));
-}
-
-.focus-visible\:border-none:focus-visible {
-  border-style: none;
 }
 
 .focus-visible\:outline-none:focus-visible {
