--- a/PDS_system/Css/output.css
+++ b/PDS_system/Css/output.css
@@ -611,14 +611,14 @@ input:focus{
   margin-right: 0.5rem;
 }
 
-.mx-auto {
-  margin-left: auto;
-  margin-right: auto;
-}
-
 .mx-\[10px\] {
   margin-left: 10px;
   margin-right: 10px;
+}
+
+.mx-auto {
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .my-\[12px\] {
@@ -686,6 +686,14 @@ input:focus{
   margin-top: 12px;
 }
 
+.mt-\[14px\] {
+  margin-top: 14px;
+}
+
+.mt-\[15px\] {
+  margin-top: 15px;
+}
+
 .mt-\[20px\] {
   margin-top: 20px;
 }
@@ -702,12 +710,8 @@ input:focus{
   margin-top: 8px;
 }
 
-.mt-\[14px\] {
-  margin-top: 14px;
-}
-
-.mt-\[15px\] {
-  margin-top: 15px;
+.mb-\[20px\] {
+  margin-bottom: 20px;
 }
 
 .block {
@@ -774,6 +778,10 @@ input:focus{
   width: 25%;
 }
 
+.w-\[100\%\] {
+  width: 100%;
+}
+
 .w-\[100px\] {
   width: 100px;
 }
@@ -798,6 +806,10 @@ input:focus{
   width: 40px;
 }
 
+.w-\[50\%\] {
+  width: 50%;
+}
+
 .w-\[80\%\] {
   width: 80%;
 }
@@ -808,14 +820,6 @@ input:focus{
 
 .w-screen {
   width: 100vw;
-}
-
-.w-\[100\%\] {
-  width: 100%;
-}
-
-.w-\[50\%\] {
-  width: 50%;
 }
 
 .max-w-screen-xl {
@@ -878,6 +882,10 @@ input:focus{
 
 .justify-around {
   justify-content: space-around;
+}
+
+.justify-evenly {
+  justify-content: space-evenly;
 }
 
 .gap-\[10px\] {
@@ -1270,15 +1278,15 @@ input:focus{
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
+.opacity-0 {
+  opacity: 0;
+}
+
 .opacity-\[0\.89\] {
   opacity: 0.89;
 }
 
 .opacity-\[0\] {
-  opacity: 0;
-}
-
-.opacity-0 {
   opacity: 0;
 }
 
